--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ dependencies = [
     "fastapi>=0.115.12",
     "litellm>=1.65.4.post1",
     "loguru>=0.7.3",
+    "numpy>=2.2.5",
+    "pandas>=2.2.3",
     "pytest>=8.3.5",
+    "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.1.0",
     "smolagents>=1.13.0",
     "uvicorn>=0.34.0",
