--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "litellm>=1.65.4.post1",
     "loguru>=0.7.3",
+    "matplotlib>=3.10.3",
     "numpy>=2.2.5",
     "pandas>=2.2.3",
     "pytest>=8.3.5",
