--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12.8"
 dependencies = [
     "fastapi>=0.115.12",
+    "instructor>=1.8.1",
     "litellm>=1.65.4.post1",
     "loguru>=0.7.3",
     "matplotlib>=3.10.3",
