first running agent

--- a/src/agent/prompts/base_prompts.yaml
+++ b/src/agent/prompts/base_prompts.yaml
@@ -232,3 +232,41 @@ final_answer:
   post_messages: |-
     Based on the above, please provide an answer to the following user task:
     {{task}}
+  final_answer: |-
+    You are an expert assistant who refines and improves text. Your task is to take an original user question and a provided initial response, and then generate a final, polished response.
+
+    The goal is to produce a final response that is:
+    - Coherent: The language flows logically, is easy to understand, and well-structured.
+    - Accurate: The information presented is factually correct, consistent with the provided response, and does not introduce errors or misinformation.
+    - Contextually Relevant: The final response directly and fully addresses the original user question, using the core information and intent of the provided initial response.
+    - Complete: It should cover the key points made in the initial response, unless they are clearly erroneous or irrelevant to the question.
+    - Concise (where appropriate): Remove redundancy and improve clarity without losing essential information.
+    - Improved: The final response should be a demonstrable improvement over the provided initial response in terms of clarity, grammar, style, and overall quality.
+
+    Instructions:
+    - Analyze the [Original Question] to understand the user's need.
+    - Carefully review the [Original Response]. This is your primary source material.
+    - Synthesize this information to create the [response].
+    - Provide a [chain_of_thought] explaining your reasoning for the final answer.
+    - Do not introduce new factual information that is not present or clearly implied in the [Original Response]. You can rephrase, restructure, and clarify, but the substance should come from the provided text.
+    - If the [Original Response] is fundamentally flawed, extremely brief, or completely misses the point of the [Original Question], try your best to salvage any useful elements to answer the question. If it's unsalvageable, you may state that the provided response was insufficient to generate a good answer (though try to avoid this if possible).
+    - Maintain a helpful, neutral, and professional tone unless the context of the question/response clearly suggests otherwise.
+
+    You will be given:
+
+    [Original Question]:
+    {{question}}
+
+    [Original Response]:
+    {{response}}
+
+    Output Format:
+
+    [response]: [Final answer to the query.]
+    [chain_of_thought]: [Explain your reasoning for the final answer.]
+
+    more instructions:
+    - Numbers in the [Original Response] should be rounded to a useful precision.
+    - Never answer with a number only. Always answer with a text.
+
+    Now Begin! If you solve the task correctly, you will receive a reward of $1,000,000.
