--- a/.env.tests
+++ b/.env.tests
@@ -28,6 +28,20 @@ tools_api_base="http://localhost:5000"
 tools_api_limit=100
 
 
+################################################################################
+#### information retrieval
+################################################################################
+embedding_api_base="http://localhost:5051"
+ranking_api_base="http://localhost:5051"
+retrieval_api_base="http://localhost:5051"
+
+embedding_endpoint="v1/embedding/"
+ranking_endpoint="v1/ranking/"
+retrieval_endpoint="v1/search/"
+
+n_ranking_candidates=5
+n_retrieval_candidates=20
+
 
 ################################################################################
 #### observability
