--- a/.env.tests
+++ b/.env.tests
@@ -39,7 +39,9 @@ embedding_endpoint="v1/embedding/"
 ranking_endpoint="v1/ranking/"
 retrieval_endpoint="v1/search/"
 
-n_ranking_candidates=5
+retrieval_table="test_table"
+
+n_ranking_candidates=1
 n_retrieval_candidates=20
 
 
