added mocked prompts

--- a/.env.tests
+++ b/.env.tests
@@ -1,7 +1,7 @@
 ################################################################################
 #### Agent
 ################################################################################
-agent_prompts_file="base_prompts.yaml"
+agent_prompts_file="tests/data/base_prompts.yaml"
 
 ################################################################################
 #### llm
@@ -22,7 +22,7 @@ openai_api_key=key3
 ################################################################################
 tools_model_id="2"
 #tools_model_api_base=http://localhost:11434
-tools_prompts_file="base_prompts.yaml"
+tools_prompts_file="tests/data/base_prompts.yaml"
 tools_max_steps=5
 tools_api_base="http://localhost:5000"
 tools_api_limit=100
