--- a/.env.tests
+++ b/.env.tests
@@ -27,6 +27,13 @@ tools_max_steps=5
 tools_api_base="http://localhost:5000"
 tools_api_limit=100
 
+################################################################################
+#### guardrails
+################################################################################
+guardrails_model_id="3"
+#guardrails_model_api_base=http://localhost:11434
+guardrails_prompts_file="tests/data/base_prompts.yaml"
+
 
 ################################################################################
 #### information retrieval
