added more notifications

--- a/.env.tests
+++ b/.env.tests
@@ -65,4 +65,17 @@ logging_level=debug
 logging_format=terminal #json
 
 
+################################################################################
+#### Slack
+################################################################################
+slack_webhook_url=test_hook
+
+################################################################################
+#### Email
+################################################################################
+app_password=1234567
+sender_email=email@email.com
+receiver_email=email@email.com
+smtp_host=smtp.email.com
+smtp_port=587
 
