added evaluation examples

--- a/.env.tests
+++ b/.env.tests
@@ -2,6 +2,7 @@
 #### Agent
 ################################################################################
 agent_prompts_file="tests/data/base_prompts.yaml"
+agent_api_base_url="http://localhost:5055"
 
 ################################################################################
 #### llm
