--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,8 @@ dev = [
     "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
 ]
+
+[tool.pytest.ini_options]
+addopts = [
+    "--ignore=tests/evaluation",
+]
