--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "smolagents[telemetry]>=1.13.0",
     "uvicorn>=0.34.0",
+    "websockets>=15.0.1",
 ]
 
 
