--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,22 +25,24 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv venv
-        uv pip install -r requirements.txt
+        uv sync --all-extras
         uv pip install -e .
+        uv pip install ruff
 
     - name: Run Ruff Linter
       run: |
-        uv run ruff check . --exit-non-zero-on-fix
+        uv run ruff check .
         uv run ruff format --check .
 
     - name: Security Scan with detect-secrets
       run: |
-        uv pip install detect-secrets
-        if [ ! -f .secrets.baseline ]; then
-          uv run detect-secrets scan --baseline .secrets.baseline
+        uv pip install detect-secrets==1.5.0  # pragma: allowlist secret
+        if [ -f .secrets.baseline ]; then
+          uv run detect-secrets scan --baseline .secrets.baseline --exclude-files '.*\.lock|package-lock\.json'
+        else
+          echo "No secrets baseline found, creating one"
+          uv run detect-secrets scan --exclude-files '.*\.lock|package-lock\.json' > .secrets.baseline
         fi
-        uv run detect-secrets scan --baseline .secrets.baseline --exclude-files '.*\.lock|package-lock\.json'
 
     - name: Set up test environment
       run: |
