--- a/src/agent/prompts/base_prompts.yaml
+++ b/src/agent/prompts/base_prompts.yaml
@@ -447,6 +447,9 @@ guardrails:
     Your goal is to determine if the agent's final response is plausible, factually consistent with its memory, clearly communicated, and directly addresses the user's query.
     Sometimes the [Question] is about a plot or comparison. The original response will be too long for the context window and will be replaced by a simple statement. Just accept it.
 
+    The task was to create different scenarios from an initial question.
+    The scenarios are the different endpoints that the agent can use to answer the question.
+    The agent will follow each scenario and try to answer it.
 
     Criteria:
 
@@ -477,11 +480,8 @@ guardrails:
     [Question]:
     {{question}}
 
-    [Response]:
-    {{response}}
-
-    [Memory]:
-    {{memory}}
+    [Candidates]:
+    {{candidates}}
 
     Output Format:
 
@@ -489,9 +489,8 @@ guardrails:
     [summary]: [One-sentence summary of the findings]
     [chain_of_thought]: [Explain your reasoning for your decision.]
     [plausibility]: [OK | CONCERN | FAIL]
-    [factual_consistency]: [OK | CONCERN | FAIL]
+    [usefulness]: [OK | CONCERN | FAIL]
     [clarity]: [OK | CONCERN | FAIL]
-    [completeness]: [OK | CONCERN | FAIL]
     [issues]: [List of specific issues, if any]
 
     Also, don't be too strict. If the response is not exactly on point, but the intent is good, approve it.
