--- a/.env.test
+++ b/.env.test
@@ -3,6 +3,9 @@
 ################################################################################
 agent_prompts_file="tests/data/base_prompts.yaml"
 agent_api_base_url="http://localhost:5055"
+sql_prompts_file="tests/data/base_prompts.yaml"
+scenario_prompts_file="tests/data/base_prompts.yaml"
+
 
 ################################################################################
 #### llm
